[gd_scene load_steps=20 format=3 uid="uid://c1nn07yw52agk"]

[ext_resource type="Script" uid="uid://bt81gji5eygdw" path="res://scripts/pop_question_normal.gd" id="1_yhjrt"]
[ext_resource type="Texture2D" uid="uid://da8pjrah0gn8v" path="res://assets/Image_assets/buttons/themes_buttons.png" id="2_mcvku"]
[ext_resource type="Texture2D" uid="uid://dj4cleevclsxv" path="res://assets/Image_assets/buttons/return.png" id="3_hn13v"]
[ext_resource type="Shader" uid="uid://c8c21pw0wn7e5" path="res://shaders/pop_question_normal.gdshader" id="3_y037l"]
[ext_resource type="Texture2D" uid="uid://g244t00ed0bl" path="res://assets/Image_assets/buttons/return_hover.png" id="4_xeyaa"]
[ext_resource type="Texture2D" uid="uid://ducj8pljuq4c6" path="res://assets/Image_assets/buttons/zoom.png" id="4_y037l"]
[ext_resource type="Texture2D" uid="uid://bihj0yqc7isi" path="res://assets/Image_assets/buttons/submit.png" id="5_xeyaa"]
[ext_resource type="FontFile" uid="uid://c7gkga2rl8br5" path="res://assets/fonts/PixelOperator8.ttf" id="6_hn13v"]
[ext_resource type="Texture2D" uid="uid://n68ver37wbql" path="res://assets/Image_assets/buttons/hint_button.png" id="7_vh7lg"]
[ext_resource type="StyleBox" uid="uid://qekhvork24j5" path="res://assets/GUI RESOURCES/main_menu_ui.hover.tres" id="8_bm8p7"]
[ext_resource type="StyleBox" uid="uid://bifmme4lln7t4" path="res://assets/GUI RESOURCES/main_menu_ui.theme.tres" id="9_yxg2q"]
[ext_resource type="StyleBox" uid="uid://bw78khciulhio" path="res://assets/GUI RESOURCES/main_menu_ui_pressed.tres" id="10_4kxet"]
[ext_resource type="Texture2D" uid="uid://m6pyijdielem" path="res://assets/Image_assets/buttons/unzoom.png" id="13_y037l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_trjki"]
shader = ExtResource("3_y037l")

[sub_resource type="Theme" id="Theme_xeyaa"]
Label/constants/line_spacing = 6
Label/font_sizes/font_size = 16

[sub_resource type="Theme" id="Theme_y037l"]
Button/styles/hover = ExtResource("8_bm8p7")
Button/styles/normal = ExtResource("9_yxg2q")
Button/styles/pressed = ExtResource("10_4kxet")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfoi0"]
bg_color = Color(0.0101855, 6.53525e-07, 0.0101853, 1)

[sub_resource type="Theme" id="Theme_ga5ot"]
Panel/styles/panel = SubResource("StyleBoxFlat_bfoi0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bfoi0"]
shader = ExtResource("3_y037l")

[node name="pop_quest_normal" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(1146, 637)
layout_mode = 3
anchor_left = 0.039
anchor_top = 0.058
anchor_right = 0.935
anchor_bottom = 0.986
offset_left = -61.928
offset_top = -35.584
offset_right = 51.88
offset_bottom = 0.0720215
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhjrt")

[node name="texture_no" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.075
anchor_right = 0.976
anchor_bottom = 0.993
offset_left = 0.554001
offset_top = 0.224998
offset_right = 0.503906
offset_bottom = -5.54095
texture = ExtResource("2_mcvku")
region_rect = Rect2(160.938, 31.77, 96.437, 96.5851)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="image_question" type="TextureRect" parent="texture_no"]
unique_name_in_owner = true
custom_minimum_size = Vector2(550, 300)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = 0.007
anchor_right = 0.75
anchor_bottom = 0.558
offset_left = -0.828003
offset_top = 1.17692
offset_right = 11.5
offset_bottom = 0.245544
expand_mode = 1
stretch_mode = 5

[node name="zoom_button" type="TextureButton" parent="texture_no/image_question"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_trjki")
layout_mode = 1
anchors_preset = -1
anchor_left = 1.321
anchor_top = 0.676
anchor_right = 1.321
anchor_bottom = 0.676
offset_left = -39.8194
offset_top = -40.034
offset_right = 160.181
offset_bottom = 159.966
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_y037l")

[node name="answer_scroll" type="ScrollContainer" parent="texture_no"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.769
anchor_right = 0.831
anchor_bottom = 0.972
offset_left = 16.52
offset_top = -2.25104
offset_right = 6.13995
offset_bottom = -10.788

[node name="answer_d" type="LineEdit" parent="texture_no/answer_scroll"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 61
placeholder_text = "Your Answer"
alignment = 1
expand_to_text_length = true

[node name="questopm_Scroll" type="ScrollContainer" parent="texture_no"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097
anchor_top = 0.073
anchor_right = 0.918
anchor_bottom = 0.54
offset_left = -0.536003
offset_top = -0.0550041
offset_right = 0.215942
offset_bottom = 0.0999756
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="question_d" type="Label" parent="texture_no/questopm_Scroll"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(839, 224)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 61
text = "This image has no label"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="skip" type="TextureButton" parent="texture_no"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.007
anchor_top = 0.054
anchor_right = 0.13
anchor_bottom = 0.274
offset_left = -0.293996
offset_top = -10.7084
offset_right = -0.460007
offset_bottom = -0.196442
texture_normal = ExtResource("3_hn13v")
texture_hover = ExtResource("4_xeyaa")

[node name="submit" type="TextureButton" parent="texture_no"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.863
anchor_top = 0.753
anchor_right = 0.98
anchor_bottom = 0.965
offset_left = -1.78003
offset_top = -7.987
offset_right = 2.19995
offset_bottom = -1.73505
texture_normal = ExtResource("5_xeyaa")

[node name="answer_hint" type="Label" parent="texture_no"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.554
anchor_right = 0.963
anchor_bottom = 0.753
offset_left = -21.74
offset_top = 0.233978
offset_right = 2468.22
offset_bottom = 269.013
scale = Vector2(0.3, 0.3)
theme = SubResource("Theme_xeyaa")
theme_override_constants/line_spacing = 70
theme_override_constants/paragraph_spacing = 0
theme_override_fonts/font = ExtResource("6_hn13v")
theme_override_font_sizes/font_size = 101
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="hint_button" type="TextureButton" parent="texture_no"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.76
anchor_right = 0.149
anchor_bottom = 0.981
offset_left = 8.8
offset_top = -0.0400391
offset_right = 0.0600128
offset_bottom = 0.000976563
texture_normal = ExtResource("7_vh7lg")

[node name="no_of_hints" type="Label" parent="texture_no/hint_button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.687
anchor_top = 0.82
anchor_right = 0.687
anchor_bottom = 0.82
offset_left = -4.936
offset_top = -39.96
offset_right = 26.064
offset_bottom = 17.04
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 56
text = "0"

[node name="show_label" type="Button" parent="texture_no"]
unique_name_in_owner = true
process_mode = 4
visible = false
layout_mode = 0
offset_left = 812.0
offset_top = 277.0
offset_right = 1038.0
offset_bottom = 325.0
theme = SubResource("Theme_y037l")
theme_override_font_sizes/font_size = 31
text = "Show label"

[node name="zoom_background" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -2.0
offset_right = 19.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ga5ot")

[node name="zoomed_image" type="TextureRect" parent="zoom_background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 10360.0
offset_bottom = 5743.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
expand_mode = 1
stretch_mode = 5

[node name="unzoom_button" type="TextureButton" parent="zoom_background"]
material = SubResource("ShaderMaterial_bfoi0")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.941
anchor_top = 0.853
anchor_right = 0.943
anchor_bottom = 0.884
offset_left = -49.973
offset_top = -23.773
offset_right = 297.721
offset_bottom = 249.356
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("13_y037l")
stretch_mode = 5

[connection signal="pressed" from="texture_no/image_question/zoom_button" to="." method="_on_zoom_button_pressed"]
[connection signal="pressed" from="texture_no/skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="texture_no/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="texture_no/hint_button" to="." method="_on_hint_button_pressed"]
[connection signal="pressed" from="texture_no/show_label" to="." method="_on_show_label_pressed"]
[connection signal="pressed" from="zoom_background/unzoom_button" to="." method="_on_unzoom_button_pressed"]
